--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyBase</string>
+
+    <string name="main_tab_title_home">首頁</string>
+    <string name="main_tab_title_profile">我的</string>
 </resources>
