[A] add message fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="main_tab_title_home">首頁</string>
     <string name="main_tab_title_profile">我的</string>
+    <string name="profile_title_message">消息中心</string>
+
+    <string name="pokemon_add_to_favorite">已添加%s至我的最愛</string>
+    <string name="pokemon_remove_from_favorite">已從我的最愛移除％s</string>
 </resources>
