--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="profile_title_message">消息中心</string>
 
     <string name="pokemon_add_to_favorite">已添加%s至我的最愛</string>
-    <string name="pokemon_remove_from_favorite">已從我的最愛移除％s</string>
+    <string name="pokemon_remove_from_favorite">已從我的最愛移除%s</string>
 </resources>
