--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,17 @@
 
     <string name="pokemon_add_to_favorite">已添加%s至我的最愛</string>
     <string name="pokemon_remove_from_favorite">已從我的最愛移除%s</string>
+
+    <string name="calendar_title_note">備忘錄</string>
+    <string name="calendar_title_note_empty">尚無備忘錄</string>
+    <string name="calendar_delete">刪除</string>
+    <string name="calendar_title_note_add">新增備忘錄</string>
+    <string name="calendar_title_note_edit">編輯備忘錄</string>
+    <string name="calendar_note_title_input">請輸入標題</string>
+    <string name="calendar_note_content_input">請輸入內容</string>
+    <string name="calendar_note_btn_add">新增</string>
+    <string name="calendar_note_btn_save">存檔</string>
+    <string name="calendar_month">月</string>
+
+    <string name="cancel">取消</string>
 </resources>
