[A] add item decoration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyBase</string>
+    <string name="app_name">隨意創作</string>
 
     <string name="main_tab_title_home">首頁</string>
     <string name="main_tab_title_profile">我的</string>
