--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,5 @@
 
     <string name="cancel">取消</string>
 
-    <string name="message_all_read">全部已讀</string>
+    <string name="message_more">更多</string>
 </resources>
