--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="cancel">取消</string>
 
     <string name="message_more">更多</string>
+    <string name="message_empty">暫無消息</string>
 </resources>
